# fact-fortress-dapp

./: .gitignore  .gitmodules  .pdm-python  Makefile  README.md  data.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  signature.json  signature_example.py  signature_generate.py  signature_verify.py  test.cairo  test_compiled.json  truffle-config.js
.github/workflows/: tests.yml
_src/functions/: genotype_info.py  risk_score.py
_src/utils/: decoder.py  verify.py
circuits/: Prover.toml  Verifier.toml
circuits/average_dot_products/: Prover.toml  Verifier.toml  config.json  info.json  verify.sh
circuits/risk/: Prover.toml  Verifier.toml  info.json
circuits/schnorr/: Prover.toml
circuits/simple/: Prover.toml  Verifier.toml  info.json
circuits/src/: main.nr
circuits/sum_of_squares/: Nargo.toml  Prover.toml  Verifier.toml  config.json  info.json
circuits/variants/: Nargo.toml  Prover.toml  Verifier.toml  info.json  more_compressed.toml
circuits/weighted_average/: Prover.toml  config.json  info.json  prove.sh
contracts/: .solhint.json  ZkpHealth.sol  dataAnalystsNFTs.sol  dataAnalyzersNFTs.sol  dataProvidersNFTs.sol  factFortress.sol  verifierProvenance.sol  zkpContract.sol  zkpHealth.sol  zkpHealthAuthorityToken.sol  zkpHealthResearcherToken.sol  zkpHealthToken.sol  zkpHealthVerifier.sol  zkpToken.sol  zkpVerifier.sol
data/: data_example.json  data_example_mod.json  data_flat.json  data_flat.toml  genetic_data.json  genetic_data_signature.json  snps_data.json  snps_data.toml
examples/: fhe.py
examples/signatures/: main copy.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
migrations/: 1_deploy_contracts.js
smart_contracts/AlgorandSmartContract/: .copier-answers.yml  README.md  pyproject.toml
smart_contracts/AlgorandSmartContract/playground/hello_world/: ProofStorageContract.py  build.py  deploy.py  test.py
smart_contracts/AlgorandSmartContract/playground/hello_world/artifacts/: application.json  contract.json
smart_contracts/Ethereum/: README.md
smart_contracts/ethereum/: README.md
src/: accounts.js  encode_example.py  ganache.js  index.js  main.py  web3.js
src/actions/: data.js  keypair.js  proof.js  publicInputs.js  publicKeys.js  tokens.js
test/: factFortress.js  helpers.js  token.js  tokens.js  zkpContract.js  zkpHealth.js  zkpToken.js
tools/: generateVerifierSol.js  generateVerifiersSol.js
(+217 files in other folders)
